# NLPA

./: README.md  finetuning.ipynb  tiny_llama.ipynb
datasets/: dataset_to_hugging_faces.py
datasets/FormAI/: README.md
datasets/c-programs/: README.md  data.txt  split.py
datasets/staqc/: README.md  nlp2_train_staqc.ipynb  nlpa_dataset_gen.ipynb  nlpa_dataset_gen_comments.ipynb  nlpa_train_gemini.ipynb
generate_code/: .gitattributes  README.md  build_dataset.py  constants.py  dataset.parquet  generate_prompt.py  llm.py  load_dataset.py  main.py  pyproject.toml  utils.py
generate_code/dataset/captions/: data-00000-of-00001.arrow  dataset_info.json  state.json
generate_code/dataset/final/: data-00000-of-00001.arrow  dataset_info.json  state.json
generate_code/prompts/: caption.txt  code.txt
mistral/: data_preprocessing.py  models.py  pretrain_model.py
preprocessing/: preprocessing.py
preprocessing/python/: preprocess_python.py
